manifest/objects/LVGO__Campaign__c.object
<CustomObject>
    <fields>
        <fullName>LVGO__ActualCost__c</fullName>
        <label>Actual Cost in Campaign</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LVGO__AmountAllOpportunities__c</fullName>
        <label>Value Opportunities in Campaign</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LVGO__AmountWonOpportunities__c</fullName>
        <label>Value Won Opportunities in Campaign</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LVGO__BudgetedCost__c</fullName>
        <label>Budgeted Cost in Campaign</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LVGO__Campaign_Auto_Name_Override__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If TRUE, this field stops the auto-naming workflow from firing.</description>
        <inlineHelpText>If TRUE, this field stops the auto-naming workflow from firing.</inlineHelpText>
        <label>Campaign Auto Name Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LVGO__Campaign_End_Date_Month_Text__c</fullName>
        <description>If the campaign end date is not null, then based on Livongo&apos;s fiscal/calendar year, this field returns a numbered month.</description>
        <formula>IF( LVGO__End_Date__c  &lt;&gt; null, 
CASE(
MONTH( LVGO__Start_Date__c ),
1, &quot;1-Jan&quot;,
2, &quot;2-Feb&quot;,
3, &quot;3-Mar&quot;,
4, &quot;4-Apr&quot;,
5, &quot;5-May&quot;,
6, &quot;6-Jun&quot;,
7, &quot;7-Jul&quot;,
8, &quot;8-Aug&quot;,
9, &quot;9-Sept&quot;,
10, &quot;10-Oct&quot;,
11, &quot;11-Nov&quot;,
&quot;12-Dec&quot;
), 
null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If the campaign end date is not null, then based on Livongo&apos;s fiscal/calendar year, this field returns a numbered month.</inlineHelpText>
        <label>Campaign End Date Month (Text)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LVGO__Campaign_End_Date_Year_Text__c</fullName>
        <description>If the campaign end date is not null, then based on Livongo&apos;s fiscal/calendar year, this field returns a the year in text format. This field helps facilitate reporting that features column groupings.</description>
        <formula>IF( LVGO__End_Date__c  &lt;&gt;null,TEXT(YEAR( LVGO__Start_Date__c )),null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If the campaign end date is not null, then based on Livongo&apos;s fiscal/calendar year, this field returns a the year in text format. This field helps facilitate reporting that features column groupings.</inlineHelpText>
        <label>Campaign End Date Year (Text)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LVGO__Campaign_ID_Long__c</fullName>
        <formula>Id
&amp; MID(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;,(
IF(FIND(MID(Id,1,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,1,0)
+IF(FIND(MID(Id,2,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,2,0)
+IF(FIND(MID(Id,3,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,4,0)
+IF(FIND(MID(Id,4,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,8,0)
+IF(FIND(MID(Id,5,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,16,0)
)+1,1)
&amp; MID(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;,(
IF(FIND(MID(Id,6,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,1,0)
+IF(FIND(MID(Id,7,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,2,0)
+IF(FIND(MID(Id,8,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,4,0)
+IF(FIND(MID(Id,9,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,8,0)
+IF(FIND(MID(Id,10,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,16,0)
)+1,1)
&amp; MID(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;,(
IF(FIND(MID(Id,11,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,1,0)
+IF(FIND(MID(Id,12,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,2,0)
+IF(FIND(MID(Id,13,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,4,0)
+IF(FIND(MID(Id,14,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,8,0)
+IF(FIND(MID(Id,15,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,16,0)
)+1,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campaign ID Long</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LVGO__Campaign_Line_of_Business__c</fullName>
        <description>Picklist describes the line of business this campaign is intended to engage.</description>
        <inlineHelpText>Picklist describes the line of business this campaign is intended to engage.</inlineHelpText>
        <label>Campaign Line of Business</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Benefit Consultants</fullName>
                </value>
                <value>
                    <fullName>Employer</fullName>
                </value>
                <value>
                    <fullName>Government</fullName>
                </value>
                <value>
                    <fullName>Health Plans</fullName>
                </value>
                <value>
                    <fullName>Health Systems</fullName>
                </value>
                <value>
                    <fullName>Labor</fullName>
                </value>
                <value>
                    <fullName>PBMS</fullName>
                </value>
                <value>
                    <fullName>All</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LVGO__Campaign_Objective__c</fullName>
        <description>Main goal of the campiagn, lead generation, brand awareness</description>
        <inlineHelpText>A written description that explains the main purpose of the event, email, etc...</inlineHelpText>
        <label>Campaign Objective</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Brand Awareness</fullName>
                    <default>true</default>
                    <label>Brand Awareness</label>
                </value>
                <value>
                    <fullName>Lead Generation</fullName>
                </value>
                <value>
                    <fullName>Relationship Development</fullName>
                </value>
                <value>
                    <fullName>Thought Leadership</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LVGO__Campaign_Start_Date_Month_Text__c</fullName>
        <description>If the campaign start date is not null, then based on Livongo&apos;s fiscal/calendar year, this field returns a the year in text format. This field helps facilitate reporting that features grouping.</description>
        <formula>IF( LVGO__Start_Date__c  &lt;&gt;null,TEXT(YEAR( LVGO__Start_Date__c )),null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If the campaign start date is not null, then based on Livongo&apos;s fiscal/calendar year, this field returns a the year in text format. This field helps facilitate reporting that features column groupings.</inlineHelpText>
        <label>Campaign Start Date Month (Text)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LVGO__Campaign_Start_Date_Year_Text__c</fullName>
        <description>If the campaign start date is not null, then based on Livongo&apos;s fiscal/calendar year, this field returns a the year in text format. This field helps facilitate reporting that features grouping.</description>
        <formula>IF( LVGO__Start_Date__c  &lt;&gt;null,TEXT(YEAR( LVGO__Start_Date__c )),null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If the campaign start date is not null, then based on Livongo&apos;s fiscal/calendar year, this field returns a the year in text format. This field helps facilitate reporting that features column groupings.</inlineHelpText>
        <label>Campaign Start Date Year (Text)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LVGO__Delivery_Method_Detail__c</fullName>
        <description>Describes the method of delivery for out bound messaging and inbound data capture. This clarifies to the user how the campaign is intending on how to capture audience data.</description>
        <inlineHelpText>Describes the method of delivery for out bound messaging and inbound data capture. This clarifies to the user how the campaign is intending on how to capture audience data.</inlineHelpText>
        <label>Delivery Method Detail</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Direct Mail</fullName>
                </value>
                <value>
                    <fullName>Non-Pardot Form</fullName>
                </value>
                <value>
                    <fullName>Non-Pardot Whitepaper</fullName>
                </value>
                <value>
                    <fullName>Pardot Asset</fullName>
                </value>
                <value>
                    <fullName>Pardot Email</fullName>
                </value>
                <value>
                    <fullName>Pardot Form</fullName>
                </value>
                <value>
                    <fullName>Pardot LandingPage</fullName>
                </value>
                <value>
                    <fullName>Pardot URL</fullName>
                </value>
                <value>
                    <fullName>Pardot Whitepaper</fullName>
                </value>
                <value>
                    <fullName>Social Post</fullName>
                </value>
                <value>
                    <fullName>Webinar RSVP Form</fullName>
                </value>
                <value>
                    <fullName>Website RFI Form</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LVGO__Delivery_Method__c</fullName>
        <description>This field unpacks record type into &apos;Delivery Methods&apos; so that marketers can intuitively report on campaigns by delivery.</description>
        <inlineHelpText>This field unpacks record type into &apos;Delivery Methods&apos; so that marketers can intuitively report on campaigns by delivery.</inlineHelpText>
        <label>Delivery Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Internal Campaign-No Delivery</fullName>
                </value>
                <value>
                    <fullName>Email/Digital</fullName>
                </value>
                <value>
                    <fullName>Direct Mail</fullName>
                </value>
                <value>
                    <fullName>Sign-up</fullName>
                </value>
                <value>
                    <fullName>Subscribe/Opt-In</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LVGO__Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LVGO__End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LVGO__ExpectedResponse__c</fullName>
        <label>Expected Response (%)</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LVGO__ExpectedRevenue__c</fullName>
        <label>Expected Revenue in Campaign</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LVGO__HierarchyActualCost__c</fullName>
        <label>Actual Cost in Hierarchy</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LVGO__HierarchyAmountAllOpportunities__c</fullName>
        <label>Value Opportunities in Hierarchy</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LVGO__HierarchyAmountWonOpportunities__c</fullName>
        <label>Value Won Opportunities in Hierarchy</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LVGO__HierarchyBudgetedCost__c</fullName>
        <label>Budgeted Cost in Hierarchy</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LVGO__HierarchyExpectedRevenue__c</fullName>
        <label>Expected Revenue in Hierarchy</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LVGO__HierarchyNumberOfContacts__c</fullName>
        <label>Contacts in Hierarchy</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LVGO__HierarchyNumberOfConvertedLeads__c</fullName>
        <label>Converted Leads in Hierarchy</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LVGO__HierarchyNumberOfLeads__c</fullName>
        <label>Leads in Hierarchy</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LVGO__HierarchyNumberOfOpportunities__c</fullName>
        <label>Opportunities in Hierarchy</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LVGO__HierarchyNumberOfResponses__c</fullName>
        <label>Responses in Hierarchy</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LVGO__HierarchyNumberOfWonOpportunities__c</fullName>
        <label>Won Opportunities in Hierarchy</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LVGO__HierarchyNumberSent__c</fullName>
        <label>Num Sent in Hierarchy</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LVGO__IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LVGO__Is_Parent_Campaign__c</fullName>
        <formula>IF(RecordTypeId=&quot;0122f00000066gDAAQ&quot;,TRUE,FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Parent Campaign</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LVGO__Is_Template__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that the campaign is being used as a template. Impacts auto-naming conventions.</description>
        <inlineHelpText>Indicates that the campaign is being used as a template. Impacts auto-naming conventions.</inlineHelpText>
        <label>Is Template</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LVGO__Legacy_Salesforce_Id__c</fullName>
        <description>Holds salesforce id&apos;s that can be referenced for existing data during migration</description>
        <externalId>true</externalId>
        <label>Legacy Salesforce Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LVGO__List_Segment_Audience__c</fullName>
        <description>Text that describes the internal short-hand for the segmentation and/or audience that the campaign articulates.</description>
        <inlineHelpText>Text that describes the internal short-hand for the segmentation and/or audience that the campaign articulates.</inlineHelpText>
        <label>List Segment/Audience</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LVGO__Migration_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Migration ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LVGO__NumberOfContacts__c</fullName>
        <label>Contacts in Campaign</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LVGO__NumberOfConvertedLeads__c</fullName>
        <label>Converted Leads in Campaign</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LVGO__NumberOfLeads__c</fullName>
        <label>Leads in Campaign</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LVGO__NumberOfOpportunities__c</fullName>
        <label>Opportunities in Campaign</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LVGO__NumberOfResponses__c</fullName>
        <label>Responses in Campaign</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LVGO__NumberOfWonOpportunities__c</fullName>
        <label>Won Opportunities in Campaign</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LVGO__NumberSent__c</fullName>
        <label>Num Sent in Campaign</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LVGO__ParentId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Campaign</label>
        <referenceTo>LVGO__Campaign__c</referenceTo>
        <relationshipLabel>Campaigns</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LVGO__Recommended_Pardot_Folder__c</fullName>
        <description>Text field that is populated with a recommended folder that should either be used and/or created if integrating this child campaign in integrating in Pardot</description>
        <inlineHelpText>Text field that is populated with a recommended folder that should either be used and/or created if integrating this child campaign in integrating in Pardot</inlineHelpText>
        <label>Recommended Pardot Folder</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LVGO__Recommended_Pardot_Tags__c</fullName>
        <description>Workflow populates this field with recommended tags that should be used when integrating with Pardot.</description>
        <inlineHelpText>Workflow populates this field with recommended tags that should be used when integrating with Pardot.</inlineHelpText>
        <label>Recommended Pardot Tags</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LVGO__Round_Sequence_of_Campaign_Communication__c</fullName>
        <label>Round/Sequence of Campaign Communication</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LVGO__Short_Name__c</fullName>
        <description>This is the internal name that will be used for the campaign. This will help support reporting and list view columns.</description>
        <inlineHelpText>This is the internal name that will be used for the campaign. This will help support reporting and list view columns.</inlineHelpText>
        <label>Short Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LVGO__Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LVGO__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Planned</fullName>
                    <default>true</default>
                    <label>Planned</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Aborted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LVGO__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                    <default>true</default>
                    <label>Email</label>
                </value>
                <value>
                    <fullName>Event</fullName>
                </value>
                <value>
                    <fullName>Webinar</fullName>
                </value>
                <value>
                    <fullName>Direct Mail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>LV Campaign</label>
    <listViews>
        <fullName>LVGO__all_Campaigns</fullName>
        <columns>NAME</columns>
        <columns>LVGO__IsActive__c</columns>
        <columns>LVGO__Start_Date__c</columns>
        <columns>LVGO__End_Date__c</columns>
        <columns>LVGO__Type__c</columns>
        <columns>LVGO__Status__c</columns>
        <columns>LVGO__BudgetedCost__c</columns>
        <columns>LVGO__ActualCost__c</columns>
        <filterScope>Everything</filterScope>
        <label>Inactive Campaigns</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Campaign Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LV Campaigns</pluralLabel>
    <recordTypes>
        <fullName>LVGO__Direct_Mail_List</fullName>
        <active>true</active>
        <description>This is a record type that should be used for marketing users and child marketing campaigns that expresses Leads/Contacts that will be engaged through direct mail delivery methods.</description>
        <label>Direct Mail List</label>
    </recordTypes>
    <recordTypes>
        <fullName>LVGO__Email_Digital_Delivery_List</fullName>
        <active>true</active>
        <description>This is a record type that should be used for marketing users and child marketing campaigns that expresses Leads/Contacts that will be engaged through Email and/or digital delivery methods.</description>
        <label>Email/Digital Delivery List</label>
    </recordTypes>
    <recordTypes>
        <fullName>LVGO__Interest_Area_Product_Subscription_List</fullName>
        <active>true</active>
        <description>This is a record type that should be used for marketing users and child marketing campaigns that expresses Leads/Contacts that have opted into a list as a result of providing interest area data, product purchases, and/or by subscribing to campaigns.</description>
        <label>Interest Area/Product/Subscription List</label>
    </recordTypes>
    <recordTypes>
        <fullName>LVGO__Parent_Campaign_List</fullName>
        <active>true</active>
        <description>This is a record type that should be used for Marketing users who want to express up to 3 levels of campaign hierarchy, which facilities campaign rollups for reporting on ROI.</description>
        <label>Parent Campaign List</label>
    </recordTypes>
    <recordTypes>
        <fullName>LVGO__Sign_up_List</fullName>
        <active>true</active>
        <description>This is a record type that should be used for marketing users and child marketing campaigns that expresses Leads/Contacts that have taken an action to sign-up for something. This should be used for event RSVPs, Webinar sign-ups, and RFI sign-ups, etc.</description>
        <label>Sign-up List</label>
    </recordTypes>
    <recordTypes>
        <fullName>LVGO__Standard</fullName>
        <active>true</active>
        <description>This is a record type that should be used for non-marketing users and non marketing campaigns</description>
        <label>Standard</label>
    </recordTypes>
    <recordTypes>
        <fullName>LVGO__Suppression_List</fullName>
        <active>true</active>
        <description>This is a record type that should be used for users to express Leads/Contacts that should be suppressed from other lists.</description>
        <label>Suppression List</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>LVGO__No_update_by_SalesTeam_member</fullName>
        <active>true</active>
        <errorConditionFormula>AND($Profile.Id == &apos;00eA00000019KCD&apos;,$Setup.LVGO__LVGO_Automation_Switch__c.LVGO__Validations__c)</errorConditionFormula>
        <errorMessage>Campaign cannot be updated by Sales Team member. Please work with marketing to update the campaign.</errorMessage>
    </validationRules>
</CustomObject>